Ran into a wall for actually detecting what a flow call has for its E in most cases